--- a/Griddy/Griddy-Info.plist
+++ b/Griddy/Griddy-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.sunnay.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>co.sunnay.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
